修改ChatFriendController中上下线方法代码

--- a/volunteer/src/main/resources/static/login.html
+++ b/volunteer/src/main/resources/static/login.html
@@ -14,7 +14,7 @@ LinkID：<input type="text" id="linkId" /></br>
     sessionStorage.setItem("userId",document.getElementById("sendUserId").value);
     sessionStorage.setItem("receiverId",document.getElementById("receiverId").value);
     sessionStorage.setItem("linkId",document.getElementById("linkId").value);
-    window.location.href="wss.jsp";
+    window.location.href="wss.html";
   }
 
 </script>
